Negative scenarios has been handles